syntax = "proto3";

option csharp_namespace = "GRPC_Server";

package upload;

service Upload {
  // Client streaming RPC tanımı
  rpc UploadFiles (stream FileChunk) returns (UploadStatus);
}

message FileChunk {
  string fileName = 1;
  bytes content = 2;
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}
